--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <body>
     <div class="container">
       <header>
-        <div class="header-logo" style="background: url(https://images.vexels.com/content/179961/preview/color-animal-flat-turtle-fb3816.png) lightgray 50% / cover no-repeat; mix-blend-mode: darken;"></div>
+        <div class="header-logo" style="background: url(https://images.vexels.com/content/179961/preview/color-animal-flat-turtle-fb3816.png) #B0E3FF 50% / cover no-repeat; mix-blend-mode: darken;"></div>
         <div class="header-title">
             <h1>Ocean Pollution: A Silent Danger to Marine Life</h1>
         </div>
@@ -29,7 +29,7 @@
             supporting environmental initiatives, and advocating for effective policies can make a difference in preserving our oceans for future generations. 
             Educating and raising public awareness about the impacts of marine pollution is also crucial for inspiring positive global changes. 
             Taking care of our oceans is essential to ensure a healthy and sustainable environment for all life forms on our planet.</p>
-          <div class="footer-logo" style="background: url(https://images.vexels.com/content/179961/preview/color-animal-flat-turtle-fb3816.png) lightgray 100% / cover no-repeat; mix-blend-mode: darken; float: right;"></div>
+          <div class="footer-logo" style="background: url(https://images.vexels.com/content/179961/preview/color-animal-flat-turtle-fb3816.png) #B0E3FF 100% / cover no-repeat; mix-blend-mode: darken; float: right;"></div>
           <h1> BY: Estrella Garcia</h1> 
         </footer>
       
